syntax = "proto3";

package keeper;

option go_package = "pkg/protobuff";

service keeperService {
  rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse) {}
  rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {};

  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {};
  rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse) {};
  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse) {};
  rpc ListAccount(ListAccountRequest) returns (ListAccountResponse);
}

message RegisterUserRequest {
  string ID = 1;
  string email = 2;
  string name = 3;
  string password = 4;
  string role = 5;
}

message RegisterUserResponse{
  string ID = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string access_token = 7;
}

message LoginUserRequest{
  string email = 1;
  string password = 2;
}

message LoginUserResponse{
  string ID = 1;
  string email = 2;
  string name = 3;
  string role = 4;
  string createdAt = 5;
  string updatedAt = 6;
  string access_token = 7;
}

message Account {
  string ID = 1;
  string title = 2;
  string login = 3;
  string password = 4;
  string URL = 5;
  string comment = 6;
}

message CreateAccountRequest {
  Account data = 1;
}

message CreateAccountResponse{
  string ID = 1;
}

message DeleteAccountRequest {
  string ID = 1;
}

message DeleteAccountResponse{
  string ID = 1;
}

message UpdateAccountRequest {
  string ID = 1;
  string title = 2;
  string login = 3;
  string password = 4;
  string URL = 5;
  string comment = 6;
}

message UpdateAccountResponse{
  string ID = 1;
}

message ListAccountRequest {
  string type = 1;
  uint64 limit = 2;
  uint64 offset = 3;

}

message ListAccountResponse{
  repeated Account data = 1;
}